(ocamllex vyos1x_lexer)
(menhir
 (flags --table)
 (modules vyos1x_parser))

(library
 (name vyos1x)
 (public_name vyos1x-config)
 (libraries yojson menhirLib fileutils pcre xml-light)
 (flags (:standard
         -verbose
         -noautolink
         -cclib -L/usr/lib/x86_64-linux-gnu
         -ccopt -fPIC
         -cclib -Wl,-Bstatic
         -cclib -lvyatta-cfg
         -cclib -Wl,-Bdynamic
         -cclib -lvyos1x_stubs
         -cclib -lglib-2.0
         -cclib -lgio-2.0
         -cclib -lboost_filesystem
         -cclib -lgobject-2.0
         -cclib -lperl
         -cclib -lstdc++))
 (preprocess (pps ppx_deriving_yojson))
 (foreign_stubs
  (language c)
  (names lexical_numeric_compare adapter)))
