(ocamllex vyos1x_lexer)
(menhir
 (flags --table)
 (modules vyos1x_parser))

(library
 (name vyos1x)
 (public_name vyos1x-config)
 (libraries yojson menhirLib fileutils pcre xml-light)
 (flags (:standard -verbose))
 (preprocess (pps ppx_deriving_yojson))
 (foreign_stubs
  (language c)
  (names lexical_numeric_compare))
 (c_library_flags -lstdc++ -lvyatta-cfg)
 (foreign_stubs
  (language c)
  (names adapter)))
