(ocamllex vyos1x_lexer)
(menhir
 (flags --table)
 (modules vyos1x_parser))

(library
 (name vyos1x)
 (public_name vyos1x-config)
 (libraries yojson menhirLib fileutils pcre xml-light unix containers)
 (preprocess (pps ppx_deriving_yojson ppx_deriving.show))
 (foreign_stubs
  (language c)
  (names lexical_numeric_compare)))
